PyAPI: Crash when using template_cache_file_* if no cache file is selected #95320

Closed
opened 2022-01-30 01:54:04 +01:00 by Antti Tikka · 5 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.84

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-01-28 23:47, hash: 03b57d3973
Worked: -

Short description of error
Blender crashes if the new cache file templates (introduced in https://developer.blender.org/D13652) are used when the given Mesh Sequence Cache modifier has no cache file selected.

The new templates are template_cache_file_velocity, template_cache_file_procedural, template_cache_file_time_settings and template_cache_file_layers.

Exact steps for others to reproduce the error
The attached file contains a single cube with a Mesh Sequence Cache modifier.

  1. Run the script to create a panel in the object properties.
  2. Open the new Hello World panel.
  3. Crash.

template_cache_file_crash.blend

I assume this is for @kevindietrich again?

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.84 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-01-28 23:47, hash: `03b57d3973` Worked: - **Short description of error** Blender crashes if the new cache file templates (introduced in https://developer.blender.org/D13652) are used when the given Mesh Sequence Cache modifier has no cache file selected. The new templates are template_cache_file_velocity, template_cache_file_procedural, template_cache_file_time_settings and template_cache_file_layers. **Exact steps for others to reproduce the error** The attached file contains a single cube with a Mesh Sequence Cache modifier. 1. Run the script to create a panel in the object properties. 2. Open the new Hello World panel. 3. Crash. [template_cache_file_crash.blend](https://archive.blender.org/developer/F12834752/template_cache_file_crash.blend) I assume this is for @kevindietrich again?
Author

Added subscribers: @kevindietrich, @Symstract

Added subscribers: @kevindietrich, @Symstract

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by 0999a01b03

This issue was referenced by 0999a01b03d4ee727ff73661ec35c8c169926689

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-02-14 16:16:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95320
No description provided.